[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seacdroid"
version = "0.1.0"
description = "Security-aware API context modeling for Android malware detection"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["seacdroid*"]
